--- a/Navigation-Drawer/app/src/main/AndroidManifest.xml
+++ b/Navigation-Drawer/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,26 +15,24 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".ViewVideos.ExtendedListVideos.RecycleView" />
-        <activity android:name=".ViewVideos.ListVideos" />
-        <activity android:name=".ViewFolders.ListVideoDates" />
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".ViewVideos.ExtendedListVideos.RecycleView"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ViewVideos.ListVideos"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ViewFolders.ListVideoDates"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ViewVideos.ViewVideo" />
         <activity android:name=".Servo.Servo" />
         <activity android:name=".Livestream.Livestream" />
-        <activity android:name=".FirebaseAuthentication">
+        <activity android:name=".Authentication.FirebaseAuthentication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-
-
-        <activity android:name=".MainActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
         </activity>
 
     </application>
